pocs/003_stroke_smoothing_savitzky_golay/build_log.txt
install
+- install savitzky_golay_poc
   +- compile exe savitzky_golay_poc Debug native 2 errors
main.zig:11:9: error: unused local variable
    var filter_y = SavitzkyGolay(5, f64).init();
        ^~~~~~~~
main.zig:5:26: error: root source file struct 'Io' has no member named 'getStdOut'
    const stdout = std.io.getStdOut().writer();
                   ~~~~~~^~~~~~~~~~
/home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig/std/Io.zig:1:1: note: struct declared here
const builtin = @import("builtin");
^~~~~
referenced by:
    callMain [inlined]: /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig/std/start.zig:627:37
    callMainWithArgs [inlined]: /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig/std/start.zig:587:20
    posixCallMainAndExit: /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig/std/start.zig:542:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
error: the following command failed with 2 compilation errors:
/home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/bin/zig build-exe -ODebug -Mroot=/home/glauber/arquivos/projetos/code-labs/infinite-canvas-sketch-app/pocs/003_stroke_smoothing_savitzky_golay/main.zig --cache-dir .zig-cache --global-cache-dir /home/glauber/.cache/zig --name savitzky_golay_poc --zig-lib-dir /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
install transitive failure
+- install savitzky_golay_poc transitive failure
   +- compile exe savitzky_golay_poc Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache/o/c32f8d30c80cf9aae04e20f56e896a07/build /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/bin/zig /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig /home/glauber/arquivos/projetos/code-labs/infinite-canvas-sketch-app/pocs/003_stroke_smoothing_savitzky_golay .zig-cache /home/glauber/.cache/zig --seed 0x5a06716d -Z327a38a1fb12705b
